--- a/Website/availble blood.html
+++ b/Website/availble blood.html
@@ -77,7 +77,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#"><i class="fas fa-tint"></i> Blood Bank</a>
+      <a class="navbar-brand" href="#"><i class="fas fa-tint"></i>Blood Bank op</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
